refactor: restructure project with scripts folder and add Azure Translator validation
- Move all Python scripts to scripts/ folder
- Add validate_vocabulary.py for Azure Translator validation
- Add [Azure: alternative] notation for suspicious translations
- Add --reset option to delete output files before processing
- Update filenames to include language and unit (anki_english_unit-1.txt)
- Update .gitignore to exclude input/ and output/ folders (copyrighted content)
- Update README with new features and Azure services documentation
- Remove deprecated files and samples

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,23 @@
 .venv/
 venv/
 env/
+
+# Ignore environment variables (CREDENTIALS - NEVER COMMIT!)
 .env
 
-# Ignore english folder (contains copyrighted textbook images)
-english/
+# Ignore SQLite database (user-specific data)
+*.db
+vocabulary.db
 
-# Ignore images folder contents (keep folder structure)
-images/*
-!images/.gitkeep
+# Ignore input folder (contains copyrighted textbook images)
+input/
+
+# Ignore output folder (contains copyrighted vocabulary data)
+output/
+
+# Ignore legacy folders
+english/
+images/
 
 # Ignore Python cache
 __pycache__/
@@ -19,6 +28,7 @@ __pycache__/
 
 # Ignore extracted raw text (copyrighted content)
 extracted_text_raw.txt
+raw_*.txt
 
 # Ignore IDE settings
 .vscode/
