--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,25 @@
-# Azure Computer Vision Configuration
-# Get your endpoint and key from Azure Portal:
-# https://portal.azure.com -> Cognitive Services -> Computer Vision
+# Azure Authentication Configuration
+# =====================================
+# Copy this file to .env and fill in your values
+# IMPORTANT: .env is in .gitignore - NEVER commit credentials!
 
-AZURE_VISION_ENDPOINT=https://your-region.api.cognitive.microsoft.com/
-AZURE_VISION_KEY=your-api-key-here
+# Option 1: Service Principal (recommended)
+# -----------------------------------------
+# Create a Service Principal with:
+#   az ad sp create-for-rbac --name "sp-anki" --role "Cognitive Services User" \
+#     --scopes "/subscriptions/YOUR_SUB_ID/resourceGroups/YOUR_RG"
+
+AZURE_CLIENT_ID=your-service-principal-client-id
+AZURE_CLIENT_SECRET=your-service-principal-secret
+AZURE_TENANT_ID=your-azure-tenant-id
+
+# Azure Endpoints (custom subdomains for token auth)
+AZURE_VISION_ENDPOINT=https://your-vision-resource.cognitiveservices.azure.com/
+AZURE_TRANSLATOR_ENDPOINT=https://your-translator-resource.cognitiveservices.azure.com/
+
+# Option 2: API Key (fallback, not recommended)
+# ----------------------------------------------
+# AZURE_VISION_KEY=your-api-key-here
 
 # Optional: Custom folder paths
 IMAGE_FOLDER=./images
